Add demo and recording documents to .gitignore
- Added DEMO_SLIDES_COMPELLING.md to gitignore
- Added RECORDING_GUIDE.md to gitignore
- Files remain local but excluded from GitHub repository

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ QUICK_CHECKLIST.md
 DEMO_SCRIPT_FINAL.md
 DEMO_CHEAT_SHEET.md
 DEMO_SLIDES_OUTLINE.md
+DEMO_SLIDES_COMPELLING.md
+RECORDING_GUIDE.md
 TEST_RESULTS.txt
 Automated Credit Memo Generation MVP.md
 Hackathon_Rules.md
